# zero2prod

./: .dockerignore  .env  .rusty-hook.toml  Cargo.toml  Dockerfile  config-debug.toml  config-test.toml  config.toml  configuration.yaml  docker-compose.yml  init_db.sh  spec.yaml
.github/workflows/: audit-on-push.yml  main.yml
.sqlx/: query-5797f8fbd206adcac9e4f62aaf859cd90ef135a76552bc5cbcfe8e5a132dd71a.json  query-e7d2b22ecfd0e5bc96d7b7c88e234fe25a49b7d6b01ee09a97651833055f86fb.json
configuration/: base.yaml  local.yaml  production.yaml  test.yaml
migrations/: 20231111221353_create_subscriptions_table.sql  20231127215822_add_status_to_subscriptions.sql  20231128201921_make_status_not_nullable_in_subscriptions.sql  20231128202047_create_subscription_token_table.sql
scripts/: on-push.sh
src/: cli.rs  configuration.rs  db.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/entities/: mod.rs  prelude.rs  subscription.rs
src/handlers/: subscriptions.rs
src/migrations/: m20221022_142846_create_table_subscriptions.rs  mod.rs
src/routes/: error.rs  mod.rs  subscriptions.rs
tests/: health_check.rs  subscribe.rs  subscriptions.rs
tests/common/: test_app.rs
zero2prod/: .rusty-hook.toml  Cargo.toml
zero2prod-core/: Cargo.toml
zero2prod-core/src/: configuration.rs  domain.rs  error.rs  lib.rs  request_id.rs  server.rs  templates.rs
zero2prod-core/src/domain/: document.rs  mod.rs  new_subscriber.rs  subscriber_name.rs
zero2prod-core/src/email/: client.rs
zero2prod-core/src/handlers/: health_check.rs  mod.rs  subscribe.rs  subscriptions.rs
zero2prod-core/src/repository/: mod.rs  subscriptions_repository.rs
zero2prod-core/src/service/: email_service.rs
zero2prod-core/src/testing/: mod.rs  test_app.rs
zero2prod-core/templates/email/: confirmation.html
zero2prod-macros/: Cargo.toml
zero2prod-macros/src/: entry.rs  lib.rs
zero2prod-web/: Cargo.toml
zero2prod-web/src/: error.rs  lib.rs  server.rs  telemetry.rs
zero2prod-web/src/client/: health_check.rs  mod.rs  subscribe.rs
zero2prod-web/src/domain/: subscriber_name.rs
zero2prod-web/src/handlers/: mod.rs  subscribe.rs
zero2prod-web/src/layer/: mod.rs  trace_id.rs
zero2prod-web/src/repository/: mod.rs  subscription_repository_impl.rs
zero2prod-web/src/service/: email_service_impl.rs  mod.rs
zero2prod-web/src/template/: engine.rs  mod.rs
zero2prod-web/src/template/resources/email/: confirmation.html  confirmation.txt
zero2prod-web/src/testing/: mod.rs  test_app.rs
zero2prod-web/tests/: health_check.rs  subscriptions.rs
zero2prod/src/: main.rs
zero2prod/tests/: health_check.rs  subscriptions.rs
