[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.6.20", features = ["macros", "headers"] }
config = "0.13.3"
hyper = "0.14.27"
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "uuid", "chrono", "migrate"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-async-drop = "0.1.0"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.22"
