[package]
name = "zero2prod-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4"] }
secrecy = { version = "0.8.0", features = ["serde"] }
email_address = "0.2.4"
async-trait = "0.1.74"

[dev-dependencies]
serde_json = "1.0.108"
fake = "2.9.1"
mockall = "0.11.4"
tokio-test = "0.4.3"
tokio-macros = "2.2.0"
