[package]
name = "zero2prod-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zero2prod-core = { path = "../zero2prod-core" }
axum = { version = "0.7.1", features = ["macros", "tracing"] }
config = "0.13.4"
hyper = "1.0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "uuid", "chrono", "migrate"] }
tokio = { version = "1.34.0", features = ["full"] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4"] }
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
email_address = "0.2.4"
reqwest = { version = "0.11.22", features = ["json"] }
http = "1.0.0"
http-body = "1.0.0"
tower = "0.4.13"
wiremock = "0.5.21"
handlebars = "4.5.0"
async-trait = "0.1.74"
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.108"
fake = "2.9.1"
reqwest = "0.11.22"
rusty-hook = "0.11.2"
wiremock = "0.5.21"
zero2prod-macros = { path = "../zero2prod-macros" }
