[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "uuid", "chrono", "migrate"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
zero2prod-core = { path = "../zero2prod-core" }
zero2prod-macros = { path = "../zero2prod-macros" }

[dev-dependencies]
reqwest = "0.11.22"
rusty-hook = "0.11.2"
