[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "uuid", "chrono", "migrate"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zero2prod-web = { path = "../zero2prod-web" }

[dev-dependencies]
reqwest = "0.11.22"
rusty-hook = "0.11.2"
serde_json = "1.0.108"
wiremock = "0.5.21"
zero2prod-macros = { path = "../zero2prod-macros" }
